# sphere-histo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  logo.png~  requirements.txt  sphere_histo.py  sphere_histo2.py
DoxyDoc/html/: annotated.html  annotated_dup.js  class_icosphere-members.html  class_icosphere.html  class_icosphere.js  class_icosphere__inherit__graph.map  class_icosphere__inherit__graph.md5  class_main_window-members.html  class_main_window.html  class_main_window.js  class_main_window__coll__graph.map  class_main_window__coll__graph.md5  class_main_window__inherit__graph.md5  class_render_data-members.html  class_render_data.html  class_render_data.js  class_render_data__coll__graph.map  class_render_data__coll__graph.md5  class_sphere_depth_data-members.html  class_sphere_depth_data.html  class_sphere_depth_data.js  (+112 more)
cpp-sphere-histo/: Doxyfile  cpp-sphere-histo  cpp-sphere-histo.pro  icosphere.cpp  icosphere.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderdata.cpp  renderdata.h  spheredepthdata.cpp  spheredepthdata.h  spherewidget.cpp  spherewidget.h
dev_resources/: Beispiel_Widget.py  Doxyfile  ESAG.py  colormaps_nicole.txt  mouseMoveSnippet  random_vecs.py  test.npy  testy.npy
sphere-histo/: CMakeLists.txt  colorbarwidget.cpp  colorbarwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderdata.cpp  renderdata.h  sphere-histo.pro  spheredepthdata.h  spherewidget.cpp  spherewidget.h
sphere-histo/libs/cnpy-master/: CMakeLists.txt
test_data/: 1.npy  canonical_points.npy  test.npy  test1.npy  test2.npy  test3.npy  testy.npy
(+432 files in other folders)
